tests/ui/forged_neutral.stderr
error: cannot construct `fulcrum::Neutral` with struct literal syntax due to private fields
 --> tests/ui/forged_neutral.rs:6:19
  |
6 |     let _forged = Neutral {
  |                   ^^^^^^^
  |
  = note: ...and other private field `_witness` that was not provided
